# wall-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EDITING.md  README.md  TODO.md  config.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-05-local-preview.md
docs/superpowers/specs/: 2026-06-05-local-preview-design.md
scriptable/: northbrook-trains.js
src/wall_dashboard/: __init__.py  amtrak.py  aqi.py  astro.py  cli.py  client.py  config.py  departures.py  metra.py  scheduler.py  stations.py  time_utils.py  trains_view.py  uv.py  weather.py  web.py
src/wall_dashboard/static/: dashboard.css  dashboard.js  preview.html  trains.css  trains.js
src/wall_dashboard/templates/: dashboard.html  trains.html
tests/: test_amtrak_gtfs.py  test_amtrak_pure.py  test_aqi.py  test_client_cache.py  test_config.py  test_departures.py  test_metra.py  test_panel_isolation.py  test_stations.py  test_time_utils.py  test_trains_view.py  test_uv.py  test_weather_pure.py  test_web_routes.py
